--- a/contactsolen.html
+++ b/contactsolen.html
@@ -41,12 +41,12 @@
         <span></span>
         <span></span>
       </button>
-      <a id="asolen" class="navbar-brand text-brand" href="indexsolen.html">SOLEN</a>
+      <a id="asolen" class="navbar-brand text-brand" href="index.html">SOLEN</a>
       
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="indexsolen.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="aboutsolen.html">About</a>
@@ -83,7 +83,7 @@
           <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
             <ol class="breadcrumb">
               <li class="breadcrumb-item">
-                <a href="indexsolen.html">Home</a>
+                <a href="index.html">Home</a>
               </li>
               <li class="breadcrumb-item active" aria-current="page">
                 Contact Us
@@ -127,7 +127,7 @@
         <div class="col-md-4">
           <div class="card-box-d">
             <div class="card-img-d ">
-              <img src="img/agent-7.jpg" alt="" class="img-d img-fluid">
+              <img src="img/agent-6.jpg" alt="" class="img-d img-fluid">
             </div>
             <div class="card-overlay card-overlay-hover">
               <div class="card-header-d">
@@ -219,7 +219,7 @@
         <div class="col-md-4">
           <div class="card-box-d">
             <div class="card-img-d">
-              <img src="img/agent-5.jpg" alt="" class="img-d img-fluid">
+              <img src="img/agent-6.jpg" alt="" class="img-d img-fluid">
             </div>
             <div class="card-overlay card-overlay-hover">
               <div class="card-header-d">
@@ -367,7 +367,7 @@
           <nav class="nav-footer">
             <ul class="list-inline">
               <li class="list-inline-item">
-                <a href="indexsolen.html">Home</a>
+                <a href="index.html">Home</a>
               </li>
               <li class="list-inline-item">
                 <a href="aboutsolen.html">About</a>
