--- a/servicessolen.html
+++ b/servicessolen.html
@@ -34,12 +34,16 @@
           <span></span>
           <span></span>
         </button>
-        <a id="asolen" class="navbar-brand text-brand" href="indexsolen.html">SOLEN</a>
+        <div style="margin: 0px;">
+          <a id="asolen" class="navbar-brand text-brand" href="index.html">SOLEN</a> 
+          <span class="navbar-brand text-brand" id="blockk" >|</span>
+          <a id="adisena" class="disena navbar-brand  " href="#" >DISENA</a>
+        </div>
       
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link " href="indexsolen.html">Home</a>
+            <a class="nav-link " href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="aboutsolen.html">About</a>
@@ -75,7 +79,7 @@
             <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                  <a href="indexsolen.html">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">
                   Services
@@ -714,7 +718,7 @@
             <nav class="nav-footer">
               <ul class="list-inline">
                 <li class="list-inline-item">
-                  <a href="indexsolen.html">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li class="list-inline-item">
                   <a href="aboutsolen.html">About</a>
