--- a/projectsolen.html
+++ b/projectsolen.html
@@ -34,12 +34,15 @@
           <span></span>
           <span></span>
         </button>
-        <a id="asolen" class="navbar-brand text-brand" href="indexsolen.html">SOLEN</a>
-      
+        <div style="margin: 0px;">
+          <a id="asolen" class="navbar-brand text-brand" href="index.html">SOLEN</a> 
+          <span class="navbar-brand text-brand" id="blockk" >|</span>
+          <a id="adisena" class="disena navbar-brand  " href="#" >DISENA</a>
+        </div>
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link " href="indexsolen.html">Home</a>
+            <a class="nav-link " href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="aboutsolen.html">About</a>
@@ -85,7 +88,7 @@
             <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                  <a href="indexsolen.html">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">
                   Projects
@@ -96,6 +99,7 @@
         </div>
       </div>
     </section>
+
 
 
 
@@ -122,7 +126,7 @@
           <div class="col-md-4">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img src="img/property-1.jpg" alt="" class="img-a img-fluid">
+                <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-overlay-a-content">
@@ -188,7 +192,7 @@
           <div class="col-md-4">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img src="img/property-6.jpg" alt="" class="img-a img-fluid">
+                <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-overlay-a-content">
@@ -242,7 +246,7 @@
           <div class="col-md-4">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img src="img/property-7.jpg" alt="" class="img-a img-fluid">
+                <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-overlay-a-content">
@@ -276,7 +280,7 @@
           <div class="col-md-4">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img src="img/property-8.jpg" alt="" class="img-a img-fluid">
+                <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-overlay-a-content">
@@ -308,7 +312,7 @@
           <div class="col-md-4">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img src="img/property-10.jpg" alt="" class="img-a img-fluid">
+                <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-overlay-a-content">
@@ -364,7 +368,7 @@
     <div class="col-md-4">
       <div class="card-box-a card-shadow">
         <div class="img-box-a">
-          <img src="img/property-7.jpg" alt="" class="img-a img-fluid">
+          <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
         </div>
         <div class="card-overlay">
           <div class="card-overlay-a-content">
@@ -398,7 +402,7 @@
     <div class="col-md-4">
       <div class="card-box-a card-shadow">
         <div class="img-box-a">
-          <img src="img/property-8.jpg" alt="" class="img-a img-fluid">
+          <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
         </div>
         <div class="card-overlay">
           <div class="card-overlay-a-content">
@@ -430,7 +434,7 @@
     <div class="col-md-4">
       <div class="card-box-a card-shadow">
         <div class="img-box-a">
-          <img src="img/property-10.jpg" alt="" class="img-a img-fluid">
+          <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
         </div>
         <div class="card-overlay">
           <div class="card-overlay-a-content">
@@ -485,7 +489,7 @@
 <div class="col-md-4">
   <div class="card-box-a card-shadow">
     <div class="img-box-a">
-      <img src="img/property-7.jpg" alt="" class="img-a img-fluid">
+      <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
     </div>
     <div class="card-overlay">
       <div class="card-overlay-a-content">
@@ -519,7 +523,7 @@
 <div class="col-md-4">
   <div class="card-box-a card-shadow">
     <div class="img-box-a">
-      <img src="img/property-8.jpg" alt="" class="img-a img-fluid">
+      <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
     </div>
     <div class="card-overlay">
       <div class="card-overlay-a-content">
@@ -551,7 +555,7 @@
 <div class="col-md-4">
   <div class="card-box-a card-shadow">
     <div class="img-box-a">
-      <img src="img/property-10.jpg" alt="" class="img-a img-fluid">
+      <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
     </div>
     <div class="card-overlay">
       <div class="card-overlay-a-content">
@@ -597,7 +601,7 @@
             <nav class="nav-footer">
               <ul class="list-inline">
                 <li class="list-inline-item">
-                  <a href="indexsolen.html">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li class="list-inline-item">
                   <a href="aboutsolen.html">About</a>
