--- a/contactsolen.html
+++ b/contactsolen.html
@@ -296,7 +296,8 @@
                   </div>
                   <div class="icon-box-content">
                     <p class="mb-1">Email.
-                      <span class="color-a">00000</span>
+                      <a class="color-a" style="text-decoration: none;" href="mailto:info@solen-ultd.com">info@solen-ultd.com</a>
+                     
                     </p>
                     <p class="mb-1">Phone.
                       <span class="color-a">000000</span>
