--- a/aboutsolen.html
+++ b/aboutsolen.html
@@ -100,7 +100,7 @@
             <div class="sinse-box">
               <h3 class="sinse-title">Solen
                 
-                <br> Sinse 2021</h3>
+                <br> Since 2021</h3>
               <p>Art & Creative</p>
             </div>
           </div>
