--- a/contactsolen.html
+++ b/contactsolen.html
@@ -59,12 +59,12 @@
           </li>
         </ul>
       </div>
-        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
-        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
+      aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
     </div>
   </nav>
   <!--/ Nav End /-->
@@ -79,18 +79,7 @@
             <span class="color-text-a">Aut voluptas consequatur unde sed omnis ex placeat quis eos. Aut natus officia corrupti qui autem fugit consectetur quo. Et ipsum eveniet laboriosam voluptas beatae possimus qui ducimus. Et voluptatem deleniti. Voluptatum voluptatibus amet. Et esse sed omnis inventore hic culpa.</span>
           </div>
         </div>
-        <div class="col-md-12 col-lg-4">
-          <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item">
-                <a href="index.html">Home</a>
-              </li>
-              <li class="breadcrumb-item active" aria-current="page">
-                Contact Us
-              </li>
-            </ol>
-          </nav>
-        </div>
+   
         <div class="col-md-12" >
           <div class="title-wrap d-flex justify-content-between">
             <div class="title-box">
@@ -295,7 +284,7 @@
                     <h4 class="icon-title">Say Hello</h4>
                   </div>
                   <div class="icon-box-content">
-                    <p class="mb-1">Email.
+                    <p class="mb-1">Email:
                       <a class="color-a" style="text-decoration: none;" href="mailto:info@solen-ultd.com">info@solen-ultd.com</a>
                      
                     </p>
