--- a/aboutsolen.html
+++ b/aboutsolen.html
@@ -29,11 +29,11 @@
     <nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top  ">
       <div class="container">
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
-          aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
+        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
         <div style="margin: 0px;">
         <a id="asolen" class="navbar-brand text-brand" href="index.html">SOLEN</a> 
         <span class="navbar-brand text-brand" id="blockk" >|</span>
@@ -58,7 +58,12 @@
           </li>
         </ul>
       </div>
-      
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
+      aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
     </div>
     </nav>
 
@@ -72,18 +77,7 @@
               <h1 class="title-single">Who we are </h1>
             </div>
           </div>
-          <div class="col-md-12 col-lg-4">
-            <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item">
-                  <a href="indexsolen.html">Home</a>
-                </li>
-                <li class="breadcrumb-item active" aria-current="page">
-                  About
-                </li>
-              </ol>
-            </nav>
-          </div>
+      
         </div>
       </div>
     </section>
