--- a/contactsolen.html
+++ b/contactsolen.html
@@ -288,8 +288,8 @@
                       <a class="color-a" style="text-decoration: none;" href="mailto:info@solen-ultd.com">info@solen-ultd.com</a>
                      
                     </p>
-                    <p class="mb-1">Phone.
-                      <span class="color-a">000000</span>
+                    <p class="mb-1">Phone:
+                      <a class="color-a" style="text-decoration: none;" href="Tel:76137263">+96176137263</a>
                     </p>
                   </div>
                 </div>
