--- a/aboutsolen.html
+++ b/aboutsolen.html
@@ -28,16 +28,11 @@
     <div class="click-closed"></div>
     <nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top  ">
       <div class="container">
-        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
-        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
+
         <div style="margin: 0px;">
         <a id="asolen" class="navbar-brand text-brand" href="index.html">SOLEN</a> 
         <span class="navbar-brand text-brand" id="blockk" >|</span>
-        <a id="adisena" class="disena navbar-brand  " href="#DISENA" >DISENA</a>
+        <a id="adisena" class="disena navbar-brand  " href="Disena.html" >DISENA</a>
       </div>
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
@@ -135,16 +130,7 @@
                 <div class="title-box-d">
                   <h3 id="DiSENA" class="title-d">DISENA</h3>
                 </div>
-                <p class="color-text-a ">
-                  ~WE ARE Solen, the Sun of life. A CORE OF KNOWLEDGE AND LEADERSHIP FOR ENGINEERS,
-                   WHO WANT TO DEFINE THE NEW RULES OF innovation.
-                <p class="color-text-a ">
-                  We are an ambitious group of motivated engineers, architects and business PEOPLE, who are inspired by 
-                  this new place where we can, with the power of our minds and ideas, change our reality around and lead 
-                  the way for all our colleagues who are eager to help build their own version of Earth. This Earth will give 
-                  back to every person who helped designing and creating greener cities, and will orbit around a new sun called Solen!
-                  <p class="color-text-a">
-                    (SOL abbreviation meanings: Signs of life, Standards of Leadership, Start of Life…)
+                <p>COMMING SOON!!!
                 </p>
               </div>
               <div class="col-lg-2  d-none d-lg-block">
