--- a/index.html
+++ b/index.html
@@ -28,16 +28,11 @@
     <div class="click-closed"></div>
     <nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top  ">
       <div class="container">
-        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
-        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
+  
         <div style="margin: 0px;">
         <a id="asolen" class="navbar-brand text-brand " href="index.html">SOLEN</a> 
         <span class="navbar-brand text-brand" id="blockk" >|</span>
-        <a id="adisena" class="disena navbar-brand  " href="#" >DISENA</a>
+        <a id="adisena" class="disena navbar-brand  " href="Disena.html" >DISENA</a>
       </div>
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
