--- a/contactsolen.html
+++ b/contactsolen.html
@@ -299,7 +299,7 @@
                 </div>
               </div>
           
-              <div  class="icon-box">
+              <div style="margin-top: 0px; margin-left: 0px;" class="icon-box">
                 <div class="icon-box-icon">
                   <span class="fas fa-mobile-alt"></span>
                 </div>
@@ -315,7 +315,7 @@
                 </div>
               </div>
 
-              <div  class="icon-box ">
+              <div style="margin-top: 0px;margin-left: 0px;"  class="icon-box ">
                 <div class="icon-box-icon">
                   <span class="ion-ios-pin"></span>
                 </div>
