--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
             </div>
             <div class="card-body-c">
               <p class="content-c">
-               Finished 
-               <span style="color: #0b5f14; font-size: large;"> 20+</span>
+               
+               <span style="color: #0b5f14; font-size: large;"> 20+</span><br/>
                 projects
               </p>
             </div>
