--- a/projectsolen.html
+++ b/projectsolen.html
@@ -28,11 +28,12 @@
     <div class="click-closed"></div>
     <nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top ">
       <div class="container">
-
-        <div style="margin: 0px;">
-          <a id="asolen" class="navbar-brand text-brand" href="index.html">SOLEN</a> 
-          
+        <a id="asolen" class="navbar-brand text-brand " href="index.html">
+          <div class="logo-img">
+          <img src="img/Solenlogo.jpeg" class="img-fluid">
         </div>
+        </a> 
+        
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
