--- a/aboutsolen.html
+++ b/aboutsolen.html
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
-              <h1 class="title-single">Who we are </h1>
+              <h1  class="title-single">Who we are </h1>
             </div>
           </div>
       
@@ -171,9 +171,9 @@
         <div class="col-md-12">
           <div class="title-wrap d-flex justify-content-between">
             <div class="title-box">
-              <h2 class="title-a">SOLEN</h2>
+              <h2 style="font-weight: 200;" class="title-a">SOLEN</h2>
               <div class="card-body-c">
-                <p  class="content-c para">
+              <!--  <p  class="content-c para">
                   ~WE ARE Solen, the Sun of life.A core of knowledge and leadership 
                   for engineers who want to define the new rules of innovation.
                 <p  class="content-c para">
@@ -183,7 +183,20 @@
                   back to every person who helped designing and creating greener cities, and will orbit around a new sun called Solen!
                   <p  class="content-c para">
                     (SOL abbreviation meanings: Signs of life, Standards of Leadership, Start of Life…)
+                </p> -->
+                <p  class="content-c para">
+                  We are solen, a core of knowledge and leadership for
+                   engineers who want to define new innovation norms.
+                <p  class="content-c para">
+                  We are an aspirational community of motivated engineers, architects,
+                   and business owners who are captivated by this new beginning where we can 
+                   alter our reality around us with the power of our thoughts as well as
+                    ideologies, laying the groundwork for all of our colleagues who are 
+                    keen to help build their own version of Earth. This Earth will reimburse
+                     all those who assisted in the design and implementation of eco-friendly cities,
+                   and it will orbit around a twin sun, widely recognized as Solen!
                 </p>
+                
               </div>
             </div> 
           </div>
