--- a/projectsolen.html
+++ b/projectsolen.html
@@ -72,7 +72,7 @@
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
               <h1  class="title-single">Our Projects</h1>
-              <span ass="color-text-a">Get Inspired</span>
+              <span style="color:#59a7d8 ;">Get Inspired</span>
             </div>
           </div>
           
