--- a/aboutsolen.html
+++ b/aboutsolen.html
@@ -134,7 +134,7 @@
             </div>
           </div>
 
-
+        -->
 
           <div id="DISENA" class="col-md-12 section-t8">
             <div class="row">
@@ -185,7 +185,7 @@
                     (SOL abbreviation meanings: Signs of life, Standards of Leadership, Start of Life…)
                 </p> -->
                 <p  class="content-c para">
-                  We are solen, a core of knowledge and leadership for
+                  We are SOLEN, a core of knowledge and leadership for
                    engineers who want to define new innovation norms.
                 <p  class="content-c para">
                   We are an aspirational community of motivated engineers, architects,
