--- a/contactsolen.html
+++ b/contactsolen.html
@@ -300,7 +300,7 @@
                 </div>
               </div>
           
-              <div style="margin-top: 0px; margin-left: 30px;" class="icon-box">
+              <div class="icon-box">
                 <div class="icon-box-icon">
                   <span class="fas fa-mobile-alt"></span>
                 </div>
