--- a/index.html
+++ b/index.html
@@ -157,15 +157,13 @@
                 <h2 class="title-c">Projects</h2>
               </div>
             </div>
-            <div style="margin-left: 20px;" class="card-body-c num">
-              <p class="content-c">
-              
-               <span  style="color: #0b5f14; font-size: large;"> 20+ </span></br>
-                projects
-              </p>
+            <div  class="card-body-c num">
+              <p id="1" class="content-c"style="color: black; font-weight: bolder;font-size: xx-large;"> 20+ </p>
             </div>
           </div>
         </div>
+
+        
       <!--  <div class="col-md-4">
           <div class="card-box-c foo">
             <div class="card-header-c d-flex">
