--- a/projectsolen.html
+++ b/projectsolen.html
@@ -163,11 +163,11 @@
             <ul class="card-info d-flex justify-content-around">
               <li>
                 <h4 class="card-info-title">location</h4>
-                <span>Al-BADDAWI</span>
+                <span>Al-Koura</span>
               </li>
               <li>
                 <h4 class="card-info-title">Type</h4>
-                <span>Residential</span>
+                <span>House</span>
               </li>
               <li>
                 <h4 class="card-info-title">Area</h4>
@@ -399,7 +399,7 @@
     <div class="row">
 <div class="form-comments">
   <div class="title-box-d">
-    <h3 id="6" class="title-d"> Landscaping </h3>
+    <h3 id="6" class="title-d"> Landscaping & Agriculture </h3>
   </div>
   </div>
 </div>
