--- a/servicessolen.html
+++ b/servicessolen.html
@@ -87,7 +87,7 @@
           <div class="col-md-4 containerrr">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img loading="lazy" src="img/construction.jpg" alt="" class="img-a img-fluid serv-pics">
+                <img src="img/construction.jpg" alt="" class="img-a img-fluid serv-pics">
               </div>
               
              
@@ -137,7 +137,7 @@
           <div class="col-md-4 containerrr">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img loading="lazy" src="img/rehabilitation.jpg" alt="" class="img-a img-fluid serv-pics">
+                <img src="img/rehabilitation.jpg" alt="" class="img-a img-fluid serv-pics">
               </div>
               <!-- <div style="color: red;" class="top-left">Solen</div> -->
               <div class="card-overlay">
@@ -186,7 +186,7 @@
             <div class="col-md-4 containerrr">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img loading="lazy" src="img/renewableenergy.jpg" alt="" class="img-a img-fluid serv-pics">
+                <img src="img/renewableenergy.jpg" alt="" class="img-a img-fluid serv-pics">
               </div>
              <!-- <div style="color: red;" class="top-left">Solen</div> -->
               <div class="card-overlay">
@@ -234,7 +234,7 @@
           <div class="col-md-4 containerrr">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img loading="lazy" src="img/fabrication.jpg" alt="" class="img-a img-fluid serv-pics">
+                <img src="img/fabrication.jpg" alt="" class="img-a img-fluid serv-pics">
               </div>
               <!-- <div style="color: red;" class="top-left">Solen</div> -->
               <div class="card-overlay">
@@ -298,7 +298,7 @@
           <div class="col-md-4 containerrr">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img loading="lazy"  src="img/waterproofing.jpeg" alt="" class="serv-pics img-a img-fluid">
+                <img src="img/waterproofing.jpeg" alt="" class="serv-pics img-a img-fluid">
               </div>
               <!-- <div style="color: red;" class="top-left">Solen</div> -->
               <div class="card-overlay">
@@ -347,7 +347,7 @@
           <div class="col-md-4 containerrr">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img loading="lazy"  src="img/scaffolding.jpg" alt="" class="serv-pics img-a img-fluid">
+                <img src="img/scaffolding.jpg" alt="" class="serv-pics img-a img-fluid">
               </div>
               <!-- <div style="color: red;" class="top-left">Solen</div> -->
               <div class="card-overlay">
@@ -400,7 +400,7 @@
           <div class="col-md-4 containerrr">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img loading="lazy" src="img/landscaping.png" alt="" class="img-a img-fluid serv-pics">
+                <img src="img/landscaping.png" alt="" class="img-a img-fluid serv-pics">
               </div>
               <!-- <div style="color: red;" class="top-left">Solen</div> -->
               <div class="card-overlay">
