--- a/contactsolen.html
+++ b/contactsolen.html
@@ -284,7 +284,7 @@
                   <h4 class="icon-title">E-MAIL</h4>
                 </div>
                 <div class="icon-box-content">
-                    <a class="color-a" style="text-decoration: none;text-align: center;" href="mailto:info@solen-ultd.com">info@solen-ultd.com</a>
+                    <a class="color-a" style="text-decoration: none;text-align: center;" href="mailto:solen.contracting@gmail.com">solen.contracting@gmail.com</a>
                  <!--  </br>
                       <a class="color-a" style="text-decoration: none;text-align: center;" href="mailto:eng.bassam@solen-ultd.com.com">eng.bassam@solen-ultd.com</a>
                     </br>
@@ -309,10 +309,10 @@
                     <h4 class="icon-title">PHONE</h4>
                   </div>
                   <div class="icon-box-content">
-                    
-                      <a class="color-a" href="tel:70315498">+961 70315498</a>
-                      
-
+                    <strong>LEBANON</strong></br>
+                      <a class="color-a" href="tel:70315498">+961 70315498</a></br>
+                      <strong>KSA</strong></br>
+                      <a class="color-a" href="tel:+966559413550">+966559413550</a>
                   </div>
                 </div>
               </div>
