--- a/projectsolen.html
+++ b/projectsolen.html
@@ -81,7 +81,7 @@
 
 
  
-    <section class="section-services section-t8">
+    <section class="section-services">
       <div class="container">
         <div class="row">
         </div>
