--- a/servicessolen.html
+++ b/servicessolen.html
@@ -468,18 +468,17 @@
               </div>
             </div>
           </div>
-          
           <div class="col-md-4 containerrr">
-            <div class="card-box-a card-shadow permit">
-              <div class="img-box-a ">
-                <img  src="img/Buildingpermits.jpeg" alt="" class="img-a img-fluid serv-pics ">
+            <div class="card-box-a card-shadow">
+              <div class="img-box-a">
+                <img  src="img/Buildingpermits.jpeg" alt="" class="img-a img-fluid serv-pics">
               </div>
               <!-- <div style="color: red;" class="top-left">Solen</div> -->
               <div class="card-overlay">
                 <div class="card-overlay-a-content">
                   <div class="card-header-a">
                     <h2 class="card-title-a">
-                      Building Permit
+                      Interio Design
                     </h2>
                   </div>
                   <div class="card-body-a">            
