--- a/servicessolen.html
+++ b/servicessolen.html
@@ -478,7 +478,7 @@
                 <div class="card-overlay-a-content">
                   <div class="card-header-a">
                     <h2 class="card-title-a">
-                      Interio Design
+                      Building Permit
                     </h2>
                   </div>
                   <div class="card-body-a">            
@@ -501,7 +501,7 @@
                 <div class="card-overlay-a-content">
                   <div class="card-header-a">
                     <h2 class="card-title-a">
-                      Interio Design
+                      Interior Design
                     </h2>
                   </div>
                   <div class="card-body-a">            
