--- a/servicessolen.html
+++ b/servicessolen.html
@@ -471,7 +471,7 @@
           <div class="col-md-4 containerrr">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img  src="img/Buildingpermits.jpeg" alt="" class="img-a img-fluid serv-pics">
+                <img  src="img/approved.jpg" alt="" class="img-a img-fluid serv-pics">
               </div>
               <!-- <div style="color: red;" class="top-left">Solen</div> -->
               <div class="card-overlay">
